comment out no-wrap to fix heroku issue

--- a/app/assets/stylesheets/style.scss
+++ b/app/assets/stylesheets/style.scss
@@ -426,6 +426,6 @@ textarea#assignment_question {
   min-width: 400px;
 }
 
-.force-heading {
-  white-space: nowrap;
-}
+// .force-heading {
+//   white-space: nowrap;
+// }
